# zephyr

./: west.yml
arch/arm/core/cortex_m/: prep_c.c
boards/silabs/radio_boards/siwx917_rb4338a/: siwx917_rb4338a.yaml
drivers/adc/: adc_silabs_siwx91x.c
drivers/clock_control/: clock_control_silabs_siwx91x.c
drivers/dma/: Kconfig.siwx91x  dma_silabs_siwx91x.c  dma_silabs_siwx91x_gpdma.c
drivers/pwm/: pwm_silabs_siwx91x.c
drivers/serial/: Kconfig.ns16550  uart_ns16550.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.silabs_siwx91x_gspi  spi_silabs_siwx91x_gspi.c
drivers/timer/: silabs_sleeptimer_timer.c
drivers/watchdog/: wdt_silabs_siwx91x.c
dts/arm/silabs/: siwg917.dtsi
dts/bindings/adc/: silabs,siwx91x-adc.yaml
dts/bindings/dma/: silabs,siwx91x-gpdma.yaml
dts/bindings/pwm/: silabs,siwx91x-pwm.yaml
include/zephyr/dt-bindings/clock/silabs/: siwx91x-clock.h
include/zephyr/dt-bindings/pinctrl/silabs/: siwx91x-pinctrl.h
modules/hal_silabs/wiseconnect/: CMakeLists.txt
samples/basic/: CMakeLists.txt
samples/basic/blinky/: CMakeLists.txt  prj.conf
samples/basic/blinky/boards/: siwx917_rb4338a.overlay
samples/basic/blinky/src/: main.c
samples/drivers/i2s/i2s_read/: prj.conf
samples/drivers/i2s/i2s_read/boards/: siwx917_rb4338a.overlay
samples/drivers/i2s/i2s_read/src/: main.c
samples/drivers/i2s/i2s_write/boards/: siwx917_rb4338a.overlay
samples/drivers/i2s/i2s_write/src/: main.c
soc/silabs/common/: soc_siwx91x_power_pmgr.c
soc/silabs/silabs_siwx91x/: Kconfig  Kconfig.defconfig
soc/silabs/silabs_siwx91x/siwg917/: Kconfig.defconfig  nwp.c
tests/drivers/dma/chan_blen_transfer/boards/: siwx917_rb4338a.overlay
tests/drivers/dma/scatter_gather/boards/: siwx917_rb4338a.conf  siwx917_rb4338a.overlay
tests/drivers/pwm/pwm_api/boards/: siwx917_rb4338a.overlay
tests/drivers/spi/spi_loopback/: prj.conf  testcase.yaml
tests/drivers/spi/spi_loopback/boards/: siwx917_rb4338a.conf  siwx917_rb4338a.overlay
tests/drivers/spi/spi_loopback/src/: spi.c
